--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 .top-banner{
     background-image: url(images/top-banner.png);
@@ -28,4 +29,9 @@ section{
     border-radius: 5px;
     color: white;
     font-weight: 700;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
