--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@ body{
     margin: 0;
 }
 .span-class{
-    color: chartreuse;
+    color: goldenrod;
 }
 h1{
     font-size: 50px;
 }
-section{
+h2{
+    font-size: 40px;
+}
+.flexible-container{
     display: flex;
     margin-bottom: 150px;
 }
@@ -34,4 +37,30 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.expericence-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow:10px 10px 40px gray;
+}
+#web-dev-experience{
+    border-left: 7px solid;
+border-image: linear-gradient(blue,cyan);
+border-image-slice: 1;
+}
+#full-stack-experience{
+    border-left: 7px solid;
+    border-image: linear-gradient(yellow,rgb(243, 9, 153));
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
